--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -10,6 +10,7 @@ $c-tan: #444444;
 $c-border: rgb(51, 51, 51);
 $c-groove: #eeede0;
 $c-violet: rgb(134, 3, 173);
+$c-font: rgb(102, 102, 102);
 
 // 10 color rainbow
 $c-rust: #cc2f00;
