--- a/templates/item/description.hbs
+++ b/templates/item/description.hbs
@@ -4,7 +4,7 @@
   {{#if editable}}
     <prose-mirror
       name='system.description'
-      data-document-u-u-i-d='{{item.uuid}}'
+      data-document-uuid='{{item.uuid}}'
       value='{{system.description}}'
       collaborate='true'
       toggled='true'
