--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -154,3 +154,8 @@
     }
   }
 }
+
+hr {
+  //background-color: colors.$c-beige;
+  background-image: linear-gradient(90deg, transparent 0%, colors.$c-font 60%, transparent 100%);
+}
