--- a/templates/actor/biography.hbs
+++ b/templates/actor/biography.hbs
@@ -1,10 +1,10 @@
 {{! Biography Tab }}
-<section class='tab biography {{tab.cssClass}}' data-group='primary' data-tab='biography'>
+<section class='tab biography scrollable {{tab.cssClass}}' data-group='primary' data-tab='biography'>
   {{! Editors must receive enriched text data from getData to properly handle rolls, UUID links, etc. }}
   {{#if editable}}
     <prose-mirror
       name='system.biography'
-      data-document-u-u-i-d='{{actor.uuid}}'
+      data-document-uuid='{{actor.uuid}}'
       value='{{system.biography}}'
       collaborate='true'
       toggled='true'
