--- a/templates/actor/effects.hbs
+++ b/templates/actor/effects.hbs
@@ -1,13 +1,13 @@
 {{! Effects Tab }}
 <section
-  class='tab effects flexcol {{tab.cssClass}}'
+  class='tab effects flexcol scrollable {{tab.cssClass}}'
   data-group='primary'
   data-tab='effects'
 >
   <ol class='effects-list'>
     {{#each effects as |section sid|}}
       <li
-        class='effects-header flexrow'
+        class='effects-header flexrow draggable'
         data-effect-type='{{section.type}}'
         data-drag="true"
       >
@@ -43,7 +43,7 @@
       <ol class='effect-list'>
         {{#each section.effects as |effect|}}
           <li
-            class='effect effect flexrow'
+            class='effect effect flexrow draggable'
             data-effect-id='{{effect.id}}'
             data-parent-id='{{effect.parent.id}}'
             data-document-class='ActiveEffect'
