--- a/templates/actor/pet.hbs
+++ b/templates/actor/pet.hbs
@@ -1,2 +1,2 @@
-<section class='tab pet {{tab.cssClass}}' data-group='primary' data-tab='pet'>
+<section class='tab pet scrollable {{tab.cssClass}}' data-group='primary' data-tab='pet'>
 </section>
