--- a/templates/item/gear/header.hbs
+++ b/templates/item/gear/header.hbs
@@ -49,7 +49,7 @@
       <div class="resource">
         <label class='resource-label'>{{localize 'SDM.ItemGearType'}}</label>
         <select name='system.type' class="resource-content">
-          {{selectOptions config.gearType localize=true selected=system.type sort=true}}
+          {{selectOptions config.gearType localize=true selected=system.type sort=true blank='TYPE.Gear'}}
         </select>
       </div>
       {{/if}}
