--- a/css/sdm.css
+++ b/css/sdm.css
@@ -190,6 +190,14 @@ hr {
   background-image: linear-gradient(90deg, transparent 0%, rgb(102, 102, 102) 60%, transparent 100%);
 }
 
+input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::after, input[type=radio]::after {
+  width: var(--checkbox-size);
+  height: var(--checkbox-size);
+  font-size: var(--checkbox-size);
+  border-radius: 3px;
+  line-height: unset;
+}
+
 .grid,
 .grid-2col {
   display: grid;
