feat: :lipstick: Add dedicated damage roll button on NPC sheet and reordered some fields

--- a/templates/actor/npc/morale-roll-dialog.hbs
+++ b/templates/actor/npc/morale-roll-dialog.hbs
@@ -1,6 +1,6 @@
 <div class='custom-roll-modal'>
   <h4>
-    {{localize 'SDM.MoraleRoll'}}
+    {{localize 'SDM.RollType' type=(localize 'SDM.Morale')}}
   </h4>
   <form class='custom-roll-form'>
     <div class='form-group mt-10'>
