--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -17,19 +17,19 @@
 
           <div class='resource'>
             <label class='resource-label'>
-              {{localize 'SDM.Morale'}}
+              {{localize 'SDM.FieldLevel'}}
             </label>
             <div class='resource-content flexrow flex-center flex-between'>
-              <input type='text' name='system.morale' value='{{system.morale}}' data-dtype="Number" />
+              <input type='text' name='system.level' value='{{system.level}}' data-dtype="Number" />
             </div>
           </div>
 
           <div class='resource'>
             <label class='resource-label'>
-              {{localize 'SDM.FieldLevel'}}
+              {{localize 'SDM.FieldDefense'}}
             </label>
             <div class='resource-content flexrow flex-center flex-between'>
-              <input type='text' name='system.level' value='{{system.level}}' data-dtype="Number" />
+              <input type='text' name='system.defense' value='{{system.defense}}' data-dtype="Number" />
             </div>
           </div>
 
@@ -55,10 +55,10 @@
 
           <div class='resource'>
             <label class='resource-label'>
-              {{localize 'SDM.FieldDefense'}}
+              {{localize 'SDM.Morale'}}
             </label>
             <div class='resource-content flexrow flex-center flex-between'>
-              <input type='text' name='system.defense' value='{{system.defense}}' data-dtype="Number" />
+              <input type='text' name='system.morale' value='{{system.morale}}' data-dtype="Number" />
             </div>
           </div>
 
@@ -72,8 +72,7 @@
           </div>
 
           <div class='resource'>
-            <label class='resource-label rollable' data-action='rollNPCDamage'
-              data-label="{{localize 'SDM.Damage'}}">
+            <label class='resource-label'>
               {{localize 'SDM.Damage'}}
             </label>
             <div class='resource-content flexrow flex-center flex-between'>
@@ -92,17 +91,27 @@
         {{! "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. }}
-        <div class="ability grid-span-1 flexrow">
-          <div class='resource-label rollable' data-type='attack' data-action='roll' data-attack="melee"
-            data-label="{{localize 'SDM.Attack'}}">
-            <div>{{localize 'SDM.Attack'}} <i class="fas fa-swords"></i></div>
-          </div>
+        <div class="ability grid-span-1">
         </div>
 
         <div class="ability grid-span-1 flexrow">
           <div class='resource-label rollable' data-action='rollNPCMorale'
             data-label="{{localize 'SDM.Morale'}}">
-            <div>{{localize 'SDM.MoraleRoll'}} <i class="fas fa-person-running"></i></div>
+            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Morale')}} <i class="fas fa-person-running rust"></i></div>
+          </div>
+        </div>
+
+        <div class="ability grid-span-1 flexrow">
+          <div class='resource-label rollable' data-type='attack' data-action='roll' data-attack="melee"
+            data-label="{{localize 'SDM.Attack'}}">
+            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Attack')}} <i class="fas fa-swords lime"></i></div>
+          </div>
+        </div>
+
+        <div class="ability grid-span-1 flexrow">
+          <div class='resource-label rollable' data-action='rollNPCDamage'
+            data-label="{{localize 'SDM.Damage'}}">
+            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Damage')}} <i class="fas fa-explosion azure"></i></div>
           </div>
         </div>
       </div>
