feat: :sparkles: Add critical success and failure tracking and styling on d20 based rolls

--- a/css/sdm.css
+++ b/css/sdm.css
@@ -198,6 +198,16 @@ input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::a
   line-height: unset;
 }
 
+.critical {
+  color: #18520B;
+  font-weight: bold;
+}
+
+.fumble {
+  color: #aa0200;
+  font-weight: bold;
+}
+
 .grid,
 .grid-2col {
   display: grid;
