--- a/templates/custom-roll-dialog.hbs
+++ b/templates/custom-roll-dialog.hbs
@@ -5,7 +5,7 @@
      <div class="form-group">
       <label for="attackTarget">{{localize 'SDM.AttackTarget'}}</label>
       <div class="flexrow">
-        {{radioBoxes 'attackTarget' attackTargetChoices checked='ha' localize=true}}
+        {{radioBoxes 'attackTarget' attackTargetChoices checked='physical' localize=true}}
       </div>
     </div>
     {{/if}}
