--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -177,3 +177,7 @@ input[type="checkbox"]::before, input[type="radio"]::before, input[type="checkbo
   color: #aa0200;
   font-weight: bold;
 }
+
+.hero-dice-btn {
+  margin-top: 10px;
+}
