--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -14,6 +14,7 @@
         (eq item.system.type 'weapon')
         item.system.readied
         item.system.weapon.damage.base
+        @root.editable
       )}}
       <div
         class='rollable flexrow'
@@ -30,6 +31,7 @@
         (eq item.system.type 'power')
         item.system.readied
         item.system.power.roll_formula
+        @root.editable
       )}}
       <div
         class='rollable flexrow'
@@ -61,6 +63,7 @@
     </div>
   </div>
   <div class='item-controls'>
+    {{#if @root.editable}}
     <a class="item-control">
       <i
         class="fa-regular fa-shield"
@@ -91,7 +94,7 @@
     >
       <i class='fas fa-edit'></i>
     </a>
-    {{#if @root.editable}}
+
     <a
       class='item-control item-delete'
       title='{{localize "DOCUMENT.Delete" type=(localize "TYPE.Item")}}'
